# IotServer

./: .ampy  .env  .gitignore  README.md  STEPS.md  pyproject.toml
IoTServer/: __init__.py  __main__.py  configs.py  db.py
IoTServer/api/: __init__.py  bme680.py
sensor/: boot.py  install.py  main.py  requirements.txt  test.py
sensor/src/: _main.py  boot.py  requests.py
tests/: test_atmsensor.py
